--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body {
-  background: #333;
-  padding: 70px 0;
-  font: 15px/20px Arial, sans-serif;
+  
 }
 
 .container {
@@ -62,7 +60,6 @@ body {
 .next, .prev {
   color: #444;
   position: absolute;
-  top: 100px;
   padding: 1em 2em;
   cursor: pointer;
   background: #CCC;
@@ -73,8 +70,14 @@ body {
 }
 .next:hover, .prev:hover { color: #000; }
 .next:active, .prev:active {
-  top: 104px;
   box-shadow: 0 1px 0 #999;
 }
-.next { right: 5em; }
-.prev { left: 5em; }
+.next {
+  right: 5em; 
+  
+}
+.prev {
+  left: 5em; 
+  
+}
+
